<resources>
    <string name="app_name">androidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_name">login name</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="RadioButton1">RadioButton</string>
    <string name="CheckBox1">CheckBox</string>
    <string name="Swtich1">Enable Something</string>
    <string name="dialog_title">Close the activity</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="switchOn">Switch is On</string>
    <string name="switchOff">Switch is Off</string>
    <string name="StartChat">Start Chat</string>
    <string name="Send">Send</string>
    <string name="Weather">Weather Forecast</string>
    <string name="title_activity_test_tool_bar">TestToolBar</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
</resources>
