<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnCount="2"
    android:rowCount="2"
    android:layout_columnWeight="1"
    android:gravity="fill"
    tools:context="com.weikaili.androidlabs.ListItemsActivity">
    <RadioButton android:text="@string/RadioButton1"
        android:layout_column="0"

        android:layout_row="0"/>
    <CheckBox android:text="@string/CheckBox1"
        android:layout_column="1"

        android:layout_row="0"/>
    <Switch android:text="@string/Swtich1"
        android:layout_column="0"

        android:layout_row="1"/>
    <ImageButton android:background="@android:drawable/btn_star_big_on"
        android:layout_gravity="center"
        android:layout_column="1"

        android:layout_row="1"/>
</GridLayout>
